[package]
name = "gpkg-derive"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/jmspae/gpkg-rs"
license = "MIT OR Apache-2.0"
description = "Internal crate used for derive macros in gpkg crate"

[dependencies]
syn = {version = "2.0", features = ["parsing", "extra-traits"]}
quote = "1.0" 
proc-macro2 = "1.0"
lazy_static = "1.5"
deluxe = "0.5.0"

[lib]
proc-macro = true
path = "lib.rs"
