[package]
name = "gpkg"
version = "0.3.0"
edition = "2021"
homepage = "https://github.com/cjriley9/gpkg-rs"
repository = "https://github.com/cjriley9/gpkg-rs"
license = "MIT OR Apache-2.0"
description = "Rust library for working with GeoPackages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
gpkg-derive = { version = "0.3.0", path = "../gpkg-derive" }
wkb = "0.9"
thiserror = "2.0"
byteorder = "1.5"
geo-types = "0.7.17"

[dev-dependencies]
tempfile = "3.20"
